[package]
name = "rust-commits"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
env_logger = "0.7"
